--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<html>
-<body bgcolor="#66699">
-</body>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html 
+	  PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <style type="text/css">
+      body {
+      background-color: #666699;
+      }
+      p {
+      color: white;
+      text-align: center;
+      font-size: 18pt;
+      font-family: serif;
+      }
+    </style>
+  </head>
+  <body>
+    <p>[rnewson.github.com]</p>
+  </body>
 </html>
