--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <style type="text/css">
       body {
-      background-color: #666699;
+      background-color: #6600ff;
       }
       p {
       color: white;
@@ -17,6 +17,6 @@
     </style>
   </head>
   <body>
-    <p>[www.rsn.io]</p>
+    <p>rsn.io</p>
   </body>
 </html>
